--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   firebase_auth: ^4.4.0
   provider: ^5.0.0
   firebase_storage: ^11.7.2
+  geolocator: ^11.0.0 
+  geocoding: ^3.0.0
+  permission_handler: ^10.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
