--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   geolocator: ^11.0.0 
   geocoding: ^3.0.0
   permission_handler: ^10.0.0
-
+  cloud_firestore: ^4.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
